blog: Fix hover background color of map collapse button

--- a/static/css/fullsize.css
+++ b/static/css/fullsize.css
@@ -36,7 +36,7 @@ article.post {
 }
 
 #map-collapse:hover {
-	background-color: rgba(0, 0, 0, 0.05);
+	background-color: #f2f2f2;
 }
 
 #map {
